--- a/app/src/main/res/layout/student_attendance_list_item.xml
+++ b/app/src/main/res/layout/student_attendance_list_item.xml
@@ -3,7 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             app:cardCornerRadius="10dp"
@@ -61,7 +61,7 @@
                                 android:text="ROLE NO"
                         />
                     </LinearLayout>
-                    <LinearLayout android:layout_width="match_parent"
+                    <LinearLayout android:layout_width="wrap_content"
                                   android:layout_height="match_parent"
                                   android:orientation="vertical"
                                   android:layout_weight="1">
@@ -71,8 +71,6 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_check_black_24dp"
-                                android:layout_alignParentBottom="true"
-                                android:layout_alignParentRight="true"
                                 app:fabSize="normal"
                                 app:borderWidth="0dp"
                                 app:elevation="6dp"
