--- a/app/src/main/res/layout/fragment_teacher_attendance_menu.xml
+++ b/app/src/main/res/layout/fragment_teacher_attendance_menu.xml
@@ -1,71 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".Fragments.TeacherFragments.TeacherAttendanceMenu">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable name="attendance" type="com.schoolfam.parcher.data.attendance.Attendance"/>
+        <variable name="currentUser" type="com.schoolfam.parcher.data.user.User"></variable>
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".Fragments.TeacherFragments.TeacherAttendanceMenu">
 
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                  app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="100dp"
-                  android:orientation="horizontal"
-                  android:gravity="center"
-                  app:layout_constraintTop_toTopOf="parent">
-        <LinearLayout android:layout_width="wrap_content"
-                      android:layout_height="match_parent"
-                      android:layout_weight="1"
-
-                      android:orientation="vertical">
-            <TextView android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:textSize="20dp"
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                      app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="100dp"
+                      android:orientation="horizontal"
                       android:gravity="center"
-                      android:fontFamily="@font/spiderman_homecoming"
-                      android:text="TODAY'S"
-            />
-            <TextView android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:textSize="20dp"
-                      android:gravity="center"
+                      app:layout_constraintTop_toTopOf="parent">
+            <LinearLayout android:layout_width="wrap_content"
+                          android:layout_height="match_parent"
+                          android:layout_weight="1"
 
-                      android:fontFamily="@font/spiderman_homecoming"
-                      android:text="ATTENDANCE"
-            />
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:src="@drawable/ic_check_black_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:id="@+id/current_date"
-                    android:layout_gravity="center"
-                    android:layout_margin="15dp"
-                    android:layout_weight="1"/>
+                          android:orientation="vertical">
+                <TextView android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:textSize="20dp"
+                          android:gravity="center"
+                          android:fontFamily="@font/spiderman_homecoming"
+                          android:text="TODAY'S"
+                />
+                <TextView android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:textSize="20dp"
+                          android:gravity="center"
+
+                          android:fontFamily="@font/spiderman_homecoming"
+                          android:text="ATTENDANCE"
+                />
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:src="@drawable/ic_check_black_24dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:id="@+id/current_date"
+                        android:layout_gravity="center"
+                        android:layout_margin="15dp"
+                        android:layout_weight="1"/>
+            </LinearLayout>
+            <LinearLayout android:layout_width="wrap_content"
+                          android:layout_height="match_parent"
+                          android:layout_weight="1"
+                          android:orientation="vertical">
+                <TextView android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:textSize="20dp"
+                          android:gravity="center"
+
+                          android:text="PICK DATE"
+                          android:fontFamily="@font/spiderman_homecoming"
+                />
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:src="@drawable/ic_check_black_24dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:layout_gravity="center"
+                        android:layout_margin="15dp"
+                        android:id="@+id/custom_date_picker"
+                        android:layout_weight="1"/>
+            </LinearLayout>
+
+
         </LinearLayout>
-        <LinearLayout android:layout_width="wrap_content"
-                      android:layout_height="match_parent"
-                      android:layout_weight="1"
-                      android:orientation="vertical">
-            <TextView android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:textSize="20dp"
-                      android:gravity="center"
 
-                      android:text="PICK DATE"
-                      android:fontFamily="@font/spiderman_homecoming"
-            />
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:src="@drawable/ic_check_black_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:layout_gravity="center"
-                    android:layout_margin="15dp"
-                    android:id="@+id/custom_date_picker"
-                    android:layout_weight="1"/>
-        </LinearLayout>
-
-
-
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
