--- a/app/src/main/res/layout/fragment_teacher_students.xml
+++ b/app/src/main/res/layout/fragment_teacher_students.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   tools:context=".Fragments.TeacherFragments.TeacherStudentsFragment">
-
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/student_recycler_view"
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable name="currentUser" type="com.schoolfam.parcher.data.user.User"></variable>
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="LinearLayoutManager"
-            tools:context=".view.MyQuoteListFragment"
-            tools:listitem="@layout/student_list_item"/>
+            tools:context=".Fragments.TeacherFragments.TeacherStudentsFragment">
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/student_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="LinearLayoutManager"
+                tools:context=".view.MyQuoteListFragment"
+                tools:listitem="@layout/student_list_item"/>
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
